added the key and removed reference to SLAP

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 		/** CONFIGURE **/
 
-		var htmlKey = "HtmlKey";			// Put your HTML key here
+		var htmlKey = "5640108846479651083";			// Put your HTML key here
 		var debug = true;					// Toggle debug mode
 
 		var testRunnerVersion = "1.1.5";	// The version of this test runner page
@@ -257,8 +257,8 @@
 
 	<form id="slap">
 		<header>
-			<h3>SLAP</h3>
-			<p>Single-Line (freeform) Address Processing: the whole address contained in one field</p>
+			<h3>Freeform</h3>
+			<p>Freeform Address Processing: the whole address contained in one field</p>
 		</header>
 		<table>
 			<tr>
@@ -277,7 +277,7 @@
 
 	<form id="twoSlap">
 		<header>
-			<h3>Two SLAP addresses</h3>
+			<h3>Two Freeform addresses</h3>
 			<p>One might be for shipping, the other might be for billing</p>
 		</header>
 		<table>
